# Scam-env

./: .gitignore  Dockerfile  README.md  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: env.py  models.py
open_env/: pyvenv.cfg
open_env/Scripts/: activate  activate.bat
server/: app.py
