[project]
name = "scam-detection-hackathon"
version = "0.1.0"
description = "Meta OpenEnv Scam Detection Project"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
inference = "inference:main"
server="server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"